[package]
name = "solana-tpu-tools-common"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Shared Solana TPU tooling for account setup, blockhash updates, and leader tracking."
documentation = "https://docs.rs/solana-tpu-tools-common"
readme = "README.md"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = ["benchmark", "solana", "tpu"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive"] }
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-clap-v3-utils = { workspace = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-connection-cache = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-native-token = { workspace = true }
solana-pubkey = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-tpu-client = { workspace = true }
solana-tpu-client-next = { workspace = true, features = ["agave-unstable-api", "metrics", "websocket-node-address-service"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[dev-dependencies]
agave-logger = { workspace = true }
# Using bincode since serializing txns isn't compatible with wincode
bincode = { workspace = true }
rand = { workspace = true }
solana-faucet = { workspace = true, features = ["dev-context-only-utils"] }
solana-fee-calculator = { workspace = true }
solana-hash = { workspace = true }
solana-net-utils = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-rpc = { workspace = true }
solana-sha256-hasher = { workspace = true }
solana-test-validator = { workspace = true }
tempfile = "3.27.0"
tokio = { workspace = true }

[lints]
workspace = true
